BUGFIX Search Form taxonomy values + Bugfix search form input over z-index

--- a/wp-content/themes/sage/assets/styles/components/_forms.scss
+++ b/wp-content/themes/sage/assets/styles/components/_forms.scss
@@ -143,6 +143,9 @@
         padding: 10px;
         padding-right: 30px;
         border-radius: 0;
+        
+        position: relative;
+        z-index: 2;
     }
 }
 
